# IPC_nanomsg

./: .gitignore  CMakeLists.txt  client.cpp  device_demo.cpp  device_demo.h  main.cpp  server.cpp
at_server/: at_messenger.cpp  at_messenger.h  at_server.cpp  at_server.h
base/: thread.cpp  thread.h
messenger/: ipc.h  json_message.h  message.h  messenger.cpp  messenger.h  service.h  system.h
system_manager/: node.h  system_manager.cpp  system_manager.h
utils/: assert.h  logger.cpp  logger.h
